# reciter-tts

./: .gitattributes  .gitignore  AGENTS.md  README.md  download_onnxruntime.sh  gradle.properties  gradlew  gradlew.bat  package.json  settings.gradle.kts
.github/workflows/: build.yml  cleanup.yml
app/: build.gradle.kts  debug.keystore  fetch.ts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
app/src/main/res/color/: bottom_nav_color.xml
app/src/main/res/drawable/: bg_bottom_nav.xml  bg_code_surface.xml  bg_hero.xml  bg_pill.xml  bg_status_dot.xml  ic_copy.xml  ic_delete.xml  ic_diagnostics_24.xml  ic_expand.xml  ic_pause.xml  ic_qwen_logo.xml  ic_reciter_logo.xml  ic_refresh_24.xml  ic_settings_24.xml  ic_share.xml  ic_share_24.xml  ic_tts_24.xml
app/src/main/res/layout/: activity_main.xml  fragment_models.xml  fragment_settings.xml  fragment_synthesis.xml  item_voice_chip.xml
app/src/main/res/menu/: bottom_nav_menu.xml  menu_bottom_nav.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: ARCHITECTURE.md  MODELS.md  MODEL_BUILD_PIPELINE.md  PIPELINE.md  TALKER_AR_PLAN.md  model.example.json
tools/: build_prefill.py  cosyvoice3_export_colab.ipynb  export_cosyvoice3.py  export_f5_tts.py  export_mms_vits.py  export_onnx_corrected.py  export_talker_ar.py  f5_tts_export_colab.ipynb  infer_onnx_reference.py  mms_tts_rus_export_colab.ipynb  qwen3_tts_export_colab.ipynb  sherpa_package_colab.ipynb  silero_export_colab.ipynb  vosk_tts_package_colab.ipynb
(+40 files in other folders)
